--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5,7 +5,7 @@ body {
   font-family: Jost;
 }
 .display-1 {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Dancing Script', handwriting;
   font-size: 5.8rem;
   line-height: 1.1;
 }
@@ -13,7 +13,7 @@ body {
   font-size: 7.25rem;
 }
 .display-2 {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Dancing Script', handwriting;
   font-size: 3rem;
   line-height: 1.1;
 }
@@ -29,7 +29,7 @@ body {
   font-size: 1.375rem;
 }
 .display-5 {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Dancing Script', handwriting;
   font-size: 2.2rem;
   line-height: 1.5;
 }
@@ -37,7 +37,7 @@ body {
   font-size: 2.75rem;
 }
 .display-7 {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Dancing Script', handwriting;
   font-size: 1.8rem;
   line-height: 1.5;
 }
@@ -1041,7 +1041,7 @@ a {
 }
 .cid-sFCAOqBTxa .mbr-text,
 .cid-sFCAOqBTxa .mbr-section-btn {
-  color: #ffffff;
+  color: #232323;
   text-align: center;
 }
 .cid-sFAQAQGsOD {
