--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5,7 +5,7 @@ body {
   font-family: Jost;
 }
 .display-1 {
-  font-family: 'Dancing Script', handwriting;
+  font-family: 'Inter', sans-serif;
   font-size: 5.8rem;
   line-height: 1.1;
 }
@@ -13,7 +13,7 @@ body {
   font-size: 7.25rem;
 }
 .display-2 {
-  font-family: 'Dancing Script', handwriting;
+  font-family: 'Inter', sans-serif;
   font-size: 3rem;
   line-height: 1.1;
 }
@@ -21,23 +21,23 @@ body {
   font-size: 3.75rem;
 }
 .display-4 {
-  font-family: 'Inter', sans-serif;
-  font-size: 1.1rem;
+  font-family: 'Dancing Script', handwriting;
+  font-size: 3rem;
   line-height: 1.5;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 1.375rem;
+  font-size: 3.75rem;
 }
 .display-5 {
-  font-family: 'Dancing Script', handwriting;
-  font-size: 2.2rem;
+  font-family: 'Inter', sans-serif;
+  font-size: 2rem;
   line-height: 1.5;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.75rem;
+  font-size: 2.5rem;
 }
 .display-7 {
-  font-family: 'Dancing Script', handwriting;
+  font-family: 'Inter', sans-serif;
   font-size: 1.8rem;
   line-height: 1.5;
 }
@@ -66,14 +66,14 @@ body {
     line-height: calc( 1.3 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 0.88rem;
-    font-size: calc( 1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.0350000000000001rem + (1.1 - 1.0350000000000001) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.4rem;
+    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.76rem;
-    font-size: calc( 1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.6rem;
+    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-7 {
     font-size: 1.44rem;
@@ -589,13 +589,13 @@ a:hover {
   display: none;
 }
 .form-control {
-  font-family: 'Inter', sans-serif;
-  font-size: 1.1rem;
+  font-family: 'Dancing Script', handwriting;
+  font-size: 3rem;
   line-height: 1.5;
   font-weight: 400;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.375rem;
+  font-size: 3.75rem;
 }
 .form-control:hover,
 .form-control:focus {
@@ -603,13 +603,13 @@ a:hover {
   border-color: #ffffff !important;
 }
 .form-control:-webkit-input-placeholder {
-  font-family: 'Inter', sans-serif;
-  font-size: 1.1rem;
+  font-family: 'Dancing Script', handwriting;
+  font-size: 3rem;
   line-height: 1.5;
   font-weight: 400;
 }
 .form-control:-webkit-input-placeholder > .mbr-iconfont {
-  font-size: 1.375rem;
+  font-size: 3.75rem;
 }
 blockquote {
   border-color: #ffffff;
@@ -1303,15 +1303,15 @@ a {
 .cid-sFAQAQGsOD H3 {
   color: #0c8495;
 }
-.cid-uNDTKoCQs5 {
+.cid-v3vGVYPOu5 {
   padding-top: 5rem;
   padding-bottom: 5rem;
   background-color: #ffffff;
 }
-.cid-uNDTKoCQs5 .mbr-fallback-image.disabled {
+.cid-v3vGVYPOu5 .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-uNDTKoCQs5 .mbr-fallback-image {
+.cid-v3vGVYPOu5 .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1320,12 +1320,22 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-uNDTKoCQs5 .mbr-section-title {
-  color: #15646f;
+@media (min-width: 1500px) {
+  .cid-v3vGVYPOu5 .container {
+    max-width: 1400px;
+  }
 }
-.cid-uNDTKoCQs5 .mbr-section-subtitle {
-  color: #15646f;
-  text-align: left;
+.cid-v3vGVYPOu5 .mbr-iconfont {
+  display: block;
+  font-size: 5rem;
+  color: #6592e6;
+  margin-bottom: 2rem;
+}
+.cid-v3vGVYPOu5 .row {
+  justify-content: center;
+}
+.cid-v3vGVYPOu5 .mbr-section-title {
+  color: #4479d9;
 }
 .cid-sFAOgbarYq {
   padding-top: 5rem;
@@ -1396,7 +1406,7 @@ a {
   color: #ffffff;
 }
 .cid-sFAOgbarYq .mbr-section-subtitle {
-  color: #05386b;
+  color: #ffffff;
 }
 .cid-sFAOgbarYq .card-title {
   color: #15646f;
